--- a/src/mapping/CMakeLists.txt
+++ b/src/mapping/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -37,6 +38,8 @@ ament_target_dependencies(occupancy_mapper
   sensor_msgs
   nav_msgs
   geometry_msgs
+  tf2_ros
+  tf2_geometry_msgs
 )
 
 # Install executable
